<resources>
    <!--APP中文名-->
    <string name="app_name">股票助手</string>
    <!--APP英文名-->
    <string name="app_name_en">StockHelper</string>
    <!--底部菜单-->
    <string name="trend">行情</string>
    <string name="follow">自选</string>
    <string name="message">消息</string>
    <string name="trade">交易</string>
    <string name="user">我</string>
    <!--搜索框提示文案-->
    <string name="home_search_hint">请输入股票代码或名称</string>
    <!--涨跌统计栏-->
    <string name="sm_survey">市场概况</string>
    <string name="sm_rank">股票排行</string>
    <!--股市类型-->
    <string name="stock_hs">A股</string>
    <string name="stock_hk">港股</string>
    <!--股市状态-->
    <string name="sm_status_unknown">未知</string>
    <string name="sm_status_open">开盘中</string>
    <string name="sm_status_close">已收盘</string>
    <string name="sm_status_rest">休市</string>
    <string name="sm_status_compete">竞价中</string>
    <string name="sm_status_init">未开盘</string>
    <string name="sm_status_noon">午间休息</string>
    <!--股票术语-->
    <string name="s_max_up">涨停</string>
    <string name="s_max_down">跌停</string>
    <string name="s_up">涨</string>
    <string name="s_down">跌</string>
    <string name="s_flat">持平</string>
</resources>
