<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/home_bottom_height"
    android:background="@color/home_bottom_bg"
    tools:context="com.fox.stockhelper.ui.view.HomeBottomView">
    <LinearLayout
        android:id="@+id/trendL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/home_bottom_margin_bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/trendIV"
            android:layout_width="@dimen/home_bottom_img_width"
            android:layout_height="@dimen/home_bottom_img_height"
            android:layout_marginTop="@dimen/home_bottom_img_margin_top"
            android:layout_marginBottom="@dimen/home_bottom_img_margin_bottom"
            android:layout_gravity="center"
            android:src="@drawable/trend" />
        <TextView
            android:id="@+id/trendTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/home_bottom_text_color"
            android:textSize="@dimen/ui_text_size_small"
            android:text="@string/trend"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/followL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/home_bottom_margin_bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/followIV"
            android:layout_width="@dimen/home_bottom_img_width"
            android:layout_height="@dimen/home_bottom_img_height"
            android:layout_marginTop="@dimen/home_bottom_img_margin_top"
            android:layout_marginBottom="@dimen/home_bottom_img_margin_bottom"
            android:layout_gravity="center"
            android:src="@drawable/follow" />
        <TextView
            android:id="@+id/followTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/home_bottom_text_color"
            android:textSize="@dimen/ui_text_size_small"
            android:text="@string/follow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/messageL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/home_bottom_margin_bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/messageIV"
            android:layout_width="@dimen/home_bottom_img_width"
            android:layout_height="@dimen/home_bottom_img_height"
            android:layout_marginTop="@dimen/home_bottom_img_margin_top"
            android:layout_marginBottom="@dimen/home_bottom_img_margin_bottom"
            android:layout_gravity="center"
            android:src="@drawable/message" />
        <TextView
            android:id="@+id/messageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/home_bottom_text_color"
            android:textSize="@dimen/ui_text_size_small"
            android:text="@string/message"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tradeL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/home_bottom_margin_bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/tradeIV"
            android:layout_width="@dimen/home_bottom_img_width"
            android:layout_height="@dimen/home_bottom_img_height"
            android:layout_marginTop="@dimen/home_bottom_img_margin_top"
            android:layout_marginBottom="@dimen/home_bottom_img_margin_bottom"
            android:layout_gravity="center"
            android:src="@drawable/trade" />
        <TextView
            android:id="@+id/tradeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/home_bottom_text_color"
            android:textSize="@dimen/ui_text_size_small"
            android:text="@string/trade"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/userL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/home_bottom_margin_bottom"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/userIV"
            android:layout_width="@dimen/home_bottom_img_width"
            android:layout_height="@dimen/home_bottom_img_height"
            android:layout_marginTop="@dimen/home_bottom_img_margin_top"
            android:layout_marginBottom="@dimen/home_bottom_img_margin_bottom"
            android:layout_gravity="center"
            android:src="@drawable/user" />
        <TextView
            android:id="@+id/userTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/home_bottom_text_color"
            android:textSize="@dimen/ui_text_size_small"
            android:text="@string/user"/>
    </LinearLayout>
</LinearLayout>