<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.fox.stockhelper.ui.fragment.StockMarketFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <!--股市状态-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/smStatusIV"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/sm_status_open"/>
            <TextView
                android:id="@+id/smStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm_status_open"
                android:textColor="@color/main"
                android:textSize="@dimen/ui_text_size_big"
                android:paddingLeft="@dimen/common_margin"/>
        </LinearLayout>
        <!--日期时间-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/smDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020-07-31"/>
            <TextView
                android:id="@+id/smWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/common_margin"
                android:text="星期五"/>
        </LinearLayout>
        <!--重点指数-->
        <LinearLayout
            android:id="@+id/topIndexLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
        <!--模块分割线-->
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>
        <!--市场概况模块标题-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm_survey"
                android:textColor="@color/flat"
                android:textSize="@dimen/ui_text_size_big"
                android:paddingLeft="@dimen/common_margin"/>
        <!--涨跌平数量和占比-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_down"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginRight="@dimen/common_margin"/>
                <TextView
                    android:id="@+id/smUSDownTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/down"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginRight="@dimen/common_margin"/>
                <ImageView
                    android:id="@+id/smUSDownIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/stock_down_shape"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="@dimen/common_margin"/>
                <ImageView
                    android:id="@+id/smUSFlatIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/stock_flat_shape"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="@dimen/close_margin"
                    android:layout_marginRight="@dimen/close_margin"/>
                <ImageView
                    android:id="@+id/smUSUpIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/stock_up_shape"
                    android:scaleType="fitXY"
                    android:layout_marginRight="@dimen/common_margin"/>
                <TextView
                    android:id="@+id/smUSUpTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/up"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginRight="@dimen/common_margin"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_up"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginRight="@dimen/common_margin"/>
            </LinearLayout>
        <!--涨停跌停持平数量-->
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/index_bg"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:paddingTop="@dimen/common_margin"
                            android:paddingBottom="@dimen/common_margin"
                            android:paddingLeft="@dimen/common_margin"
                            android:paddingRight="@dimen/common_margin">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/s_max_up"/>
                            <TextView
                                android:id="@+id/smUSUpLimitTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/up"
                                android:text="0"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/index_bg"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:paddingTop="@dimen/common_margin"
                            android:paddingBottom="@dimen/common_margin"
                            android:paddingLeft="@dimen/common_margin"
                            android:paddingRight="@dimen/common_margin">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/s_max_down"/>
                            <TextView
                                android:id="@+id/smUSDownLimitTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/up"
                                android:text="0"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/index_bg"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:paddingTop="@dimen/common_margin"
                            android:paddingBottom="@dimen/common_margin"
                            android:paddingLeft="@dimen/common_margin"
                            android:paddingRight="@dimen/common_margin">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/s_flat"/>
                            <TextView
                                android:id="@+id/smUSFlatTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/up"
                                android:text="0"/>
                        </LinearLayout>
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        <!--模块分割线-->
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>
        <!--股票排行模块标题-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sm_rank"
                android:textColor="@color/flat"
                android:textSize="@dimen/ui_text_size_big"/>
        <!--股票排行-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stockRankHeader"
            android:background="#B7B7B7">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="@dimen/ui_text_size_small"
                android:text="股票"/>
            <com.fox.stockhelper.ui.view.SortTextView
                android:id="@+id/priceSTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:text="价格"
                app:sortColumn="price"/>
            <com.fox.stockhelper.ui.view.SortTextView
                android:id="@+id/uptickRateSTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:text="涨幅"
                app:sortColumn="uptickRate"/>
            <com.fox.stockhelper.ui.view.SortTextView
                android:id="@+id/surgeRateSTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:text="波动"
                app:sortColumn="surgeRate"/>
            <com.fox.stockhelper.ui.view.SortTextView
                android:id="@+id/dealNumSTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:text="成交量"
                app:sortColumn="dealNum"/>
            <com.fox.stockhelper.ui.view.SortTextView
                android:id="@+id/dealMoneySTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:text="成交额"
                app:sortColumn="dealMoney"/>
        </LinearLayout>
        <ListView
            android:id="@+id/stockRankList"
            android:layout_width="match_parent"
            android:layout_height="485dp">
        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="更多"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"/>
    </LinearLayout>
</ScrollView>